# rust-kzg-node

./: .gitignore  Cargo.toml  README.md  browser.js  index.d.ts  index.js  napi.config.json  package.json  rust_kzg_node.wasi-browser.js  rust_kzg_node.wasi.cjs
.github/actions/: patch-wasm-package.js
.github/workflows/: CI.yml  release.yml
__test__/: index.spec.ts
src/: lib.rs
