
[package]
authors = ["EthStorage"]
edition = "2021"
name = "rust_kzg_node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-kzg-blst = { git = "https://github.com/grandinetech/rust-kzg", package = "rust-kzg-blst" }
kzg = { git = "https://github.com/grandinetech/rust-kzg", package = "kzg" }
napi = "3.0.0"
napi-derive = "3.0.0"
rayon = "1.7"
hex = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
